--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 
-<header class="header flex-container">
+<header class="header flex-container" >
     <div class="name">
-    <h1>Timothy Lefkowitz Studio</h1>
+        <h1 style="top-margin:15%">Timothy Lefkowitz Studio</h1>
     </div>
 </header>
 
