--- a/index.html
+++ b/index.html
@@ -1,76 +1,256 @@
+<!--/*-->
+<!--Thank you for checking out my work -->
+
+<!-- I'd like to work with you! -->
+<!-- contact me at -->
+<!-- timothy.lefkowitz@gmail.com -->
+<!-- -->
+<!--*/-->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+
+
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="description" content="work of timothy lefkowitz">
-    <meta name="author" content="timothy lefkowitz studio">
-
-
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
     <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
 
+    <title>Welcome</title>
 
-    <title>Timothy Lefkowitz Studio</title>
-    <link rel="stylesheet" href="css/stylesheet.css">
-    <title>Tim's Admin</title>
-
-    <!-- Custom styles for this template -->
-    <link href="signin.css" rel="stylesheet">
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/sign-in/">
 
 
+    <!-- Custom styles for this template -->
+    <!--  <link href="signin.css" rel="stylesheet">-->
 
-    <!-- FONTS ----->
-
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
 
 
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+    <!--    //favcon-->
+    <link rel="icon" type="image/png" sizes="16x16" href="https://live.staticflickr.com/65535/51320697245_9708355788_c.jpg">
 </head>
 
-<header class="header flex-container" >
-    <div class="name">
-        <h1 style="top-margin:15%">Timothy Lefkowitz Studio</h1>
+
+
+
+<style>
+    *, *::before, *::after {
+        box-sizing: border-box;
+        font-family: sans-serif;
+        font-weight: normal;
+    }
+
+    body {
+        padding:0;
+        margin:0;
+        background: linear-gradient(to right, #00AAFF, #00FF6c);
+    }
+
+    .calculator-grid > button {
+        cursor: pointer;
+        font-size: 2rem;
+        border: 1px solid white;
+        outline: none;
+        background-color: rgba(255, 255, 255, .75);
+    }
+
+    .calculator-grid > button:hover {
+        background-color:rgba(255, 255, 255, .9);
+    }
+
+
+    .output .previous-operand {
+        color: rgba(255, 255, 255, .75);
+        font-size: 2.5rem;
+    }
+</style>
+
+
+
+<!--{}{}{}{}{}{}{}{}{}{}{}}{}{}    sec:authorize="isAuthenticated()     -->
+
+<body class="text-center" style="max-width: 1920px" >
+
+
+<!--<nav th:include="partials/nav :: navbarfragment">-->
+<!--  The entire content of the partial will be *included* inside this div.-->
+<!--</nav>-->
+
+
+
+
+
+<form class="form-signin" th:action="@{/index}" method="post" style="margin-top: 125px; max-width: 300px; margin-left:20%; margin-right:20%; align-items: center">
+    <img class="mb-4" src="https://i.imgur.com/v2t7qrK.gif" alt="" width="72" height="72">
+
+
+    <h1 class="h3 mb-3 font-weight-normal"><b>hello, it's me timothy</b> </h1>
+    <p style=""><b>this is my github pages</b></p>
+    <p style="color:#474545">I'm interested in almost everything science and I LOVE TO BUILD and CREATE</p>
+<!--    <a style="color:#474545" style="color:#474545">HTML is where I go to remember why I love to program</a>-->
+<!--    <a style="color:#474545">My latest awesome adventure was uploading a hello world in C++ to an Ardiuno, Soldered to a  </a>-->
+
+
+
+
+
+
+    <!--  // Spring Security -->
+<!--    <div th:if="${param.error}">-->
+<!--        Invalid Username and Password.-->
+<!--    </div>-->
+<!--    <div th:if="${param.logout}">-->
+<!--        You have been logged out.-->
+<!--    </div>-->
+
+
+
+
+
+<!--    <label for="username" class="sr-only">username</label>-->
+<!--    <input type="username" id="username" class="form-control" placeholder="username" required="" autofocus="" name="username">-->
+<!--    &lt;!&ndash;         Password, your password will be hashed and encrypted      &ndash;&gt;-->
+<!--    <label for="password" class="sr-only">Password</label>-->
+<!--    <input type="password" id="password" class="form-control" placeholder="password" required="" name="password">-->
+<!--    <p class="mt-5 mb-3 text-muted">Password is hashed and Spring Security our Security</p>-->
+
+    <div class="imgblocks col img-responsive">
+        <img src="img/bridge.gif" class="top img-responsive" style="">
     </div>
-</header>
 
-<nav class="nav flex-container">
-    <div class="flex-item">3D</div>
-    <div class="flex-item">Photography</div>
-    <div class="flex-item">Code</div>
-    <div class="flex-item">About</div>
-</nav>
+    <div class="checkbox mb-3">
 
-<body class="body">
-    <div class="container flex-container">
-    <div class="grid-container">
+        <!--- Remember Me doesn't function. I'm prioritizing currently     -->
+        <!--    <label>-->
+        <!--      <input type="checkbox" value="remember-me"> Remember me-->
+        <!--    </label>-->
+    </div>
+    <button class="btn btn-lg btn-block" value="Log In" style="background:linear-gradient(to right, #9e69ba, #b700fc);" type="submit">Sign in</button>
 
-        <div class="row">
-        <div class="imgblocks col">
-            <img src="img/water_sculpture2.jpg" class="top">
-        </div>
+</form>
 
+<form class="form-signin" style="margin-top: 45px; max-width: 300px; margin-left:20%; margin-right:20%; align-items: center">
+    <p class="mt-5 mb-3 text-muted">Check out my Code</p>
 
-        <div class="imgblocks col">
-            <img src="img/water_sculpture2.jpg" class="top">
-        </div>
-        </div>
+    <div style="max-width: 300px; margin-left:20%; margin-right:20%; align-items: center">
+        <a href="users/sign-up" class="btn btn-lg btn-block" style="background:linear-gradient(to right, #537c68, #575741); color:rgba(198,203,211,0.85)" role="button" aria-pressed="true">github</a>
 
     </div>
-    </div>
-    </div>
+
+</form>
+
+
+
+<!--  /// Audio Controls  -->
+<!--          W3EXAMPLE   -->
+
+<!--  <audio controls>-->
+<!--    <source src="horse.ogg" type="audio/ogg">-->
+<!--    <source src="horse.mp3" type="audio/mpeg">-->
+<!--    Your browser does not support the audio element.-->
+<!--  </audio>-->
+
+<!-- -->
+<!--</div>-->
+<!--  <audio controls>-->
+<!--    <source src="horse.ogg" type="audio/ogg">-->
+<!--    <source src="horse.mp3" type="audio/mpeg">-->
+<!--    Your browser does not support the audio element.-->
+<!--  </audio>-->
+
+
+<!--        jquery-->
+
+<script
+        src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+        crossorigin="anonymous"></script>
+
+
+<!--    Filestack Javascript-->
+
+<script src="//static.filestackapi.com/filestack-js/3.x.x/filestack.min.js"></script>
+<script th:inline="javascript">
+
+    /*<![CDATA[*/
+
+    var filestackapi = [[${fileStackApi}]];
+    console.log(filestackapi);
+
+
+
+    //Establishing a FileStack connection
+    const client = filestack.init(filestackapi);
+
+    const options = {
+        onUploadDone:
+            function(res){
+                $("#stashFileStackURL").val(res.filesUploaded[0].url);
+                console.log(res.filesUploaded[0].url);
+
+
+            }
+    }
+
+
+    // inputIMG button code
+    $("#inputIMG").click(function(){
+        client.picker(options).open();
+    })
+
+
+
+
+</script>
+
+<script>
+
+    $(document).ready(function(){
+        $("#signUpButton").click(function(){
+
+            // <<<<<<<< >>>> Let's write some jquery. <<<<>>>>>>>'
+            // <<<<<<>>>>      Here's my example of doing something on a click  <<<>>>>>>>>
+            // <<<<<>>>>        Will brb to this    <<<<>>>>>>>>>>>>>>>>>
+            // $("#email").find(100),{
+            //   $("#prize")
+            // var prize = "goldMember"
+            //   alert("You are the 100th signup win a price " + prize)
+            // }
+
+        });
+    });
+
+
+
+</script>
+
+
+<!--      Security Feature-->
+<!--{}{}{}{}{}{}{}{}{}{}{}{}{}{}{}{{}}-->
+
+
+<http use-expressions="true">
+    <intercept-url pattern="/admin*"
+                   access="hasRole('admin') and hasIpAddress('70.94.160.36')"/>
+    ...
+</http>
+
+
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
 
 </body>
-
-<footer>
-
-</footer>
 </html>
