--- a/aboutme.html
+++ b/aboutme.html
@@ -217,10 +217,10 @@
                 <!--          Avatar and Add to Contacts Buttons-->
                 <div style="margin-bottom:1.8vh">
                     <a href="javascript:;" class="avatar rounded-circle">
-                        <img class="avatar" th:src="${user.imgPath}" style="height: 20vh; width: 20vh;">
+                        <img class="avatar" src="/img/me.jpeg" style="height: 20vh; width: 20vh;">
                     </a>
                     <h1>Timothy Lefkowitz</h1>
-                    <a style="color:#737373;" >developer/artist from texas</a><p></p>
+                    <a style="color:#737373;" >programmer / 3d artist / photographer</a><p></p>
                     <a style="color:#737373;" href="/">photonlabs.xyz</a><br>
                     <a style="color:#737373;" href="Tim/contact">resume / cv</a>
                 </div>
