--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <!--      <input type="checkbox" value="remember-me"> Remember me-->
         <!--    </label>-->
     </div>
-    <button class="btn btn-lg btn-block" value="Log In" style="background:linear-gradient(to right, #9e69ba, #b700fc);" type="submit">Sign in</button>
+    <a href="home.html" class="btn btn-lg btn-block" value="Log In" style="background:linear-gradient(to right, #9e69ba, #b700fc); color:antiquewhite" type="submit"><b>enter</b></a>
 
 </form>
 
@@ -141,7 +141,7 @@
     <p class="mt-5 mb-3 text-muted">Check out my Code</p>
 
     <div style="max-width: 300px; margin-left:20%; margin-right:20%; align-items: center">
-        <a href="users/sign-up" class="btn btn-lg btn-block" style="background:linear-gradient(to right, #537c68, #575741); color:rgba(198,203,211,0.85)" role="button" aria-pressed="true">github</a>
+        <a href="https://github.com/timlefkowitz" class="btn btn-lg btn-block" style="background:linear-gradient(to right, #9e69ba, #b700fc); color:antiquewhite" role="button" aria-pressed="true">github</a>
 
     </div>
 
