--- a/aboutme.html
+++ b/aboutme.html
@@ -107,11 +107,11 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle bg-dark" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">code</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="/import/calc.html">My Calculator</a>
-                        <a class="dropdown-item" href="/import/coffee.html">Coffee Project(my first paired programming project)</a>
-                        <a class="dropdown-item" href="/import/foods.html">Favorite Foods Map</a>
-                        <a class="dropdown-item" href="/import/konami.html">Konami Code</a>
-                        <a class="dropdown-item" href="/import/weathermap.html">Weather Map</a>
+                        <a class="dropdown-item" href="/calc.html">My Calculator</a>
+                        <a class="dropdown-item" href="/coffee.html">Coffee Project(my first paired programming project)</a>
+                        <a class="dropdown-item" href="/foods.html">Favorite Foods Map</a>
+                        <a class="dropdown-item" href="/konami.html">Konami Code</a>
+                        <a class="dropdown-item" href="/weathermap.html">Weather Map</a>
                         <div role="separator" class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#three">three</a>
                     </div>
