--- a/calc.html
+++ b/calc.html
@@ -78,7 +78,7 @@
                     <!--                        <a class="nav-link" href="updatestatus">update status</a>-->
                     <!--                    </li>-->
                     <li class="nav-item">
-                        <a class="nav-link" href="/home.html">back to photon labs</a>
+                        <a class="nav-link" href="home.html">back to photon labs</a>
                     </li>
                     <!--                    <li class="nav-item">-->
                     <!--                        <a class="nav-link" th:action="@{/logout}" th:method="post" th:href="logout">logout</a>-->
