--- a/home.html
+++ b/home.html
@@ -113,7 +113,7 @@
                         <a class="dropdown-item" href="konami.html">Konami Code</a>
                         <a class="dropdown-item" href="weathermap.html">Weather Map</a>
                         <div role="separator" class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#three">three</a>
+<!--                        <a class="dropdown-item" href="#three">three</a>-->
                     </div>
                 </li>
 
