--- a/flickarchive.html
+++ b/flickarchive.html
@@ -152,7 +152,16 @@
         <img src="https://live.staticflickr.com/65535/50641796993_3c70dd950c_b.jpg" alt="Timothy Lefkowitz Portfolio">
         <img src="https://live.staticflickr.com/65535/50724443672_cd02973a1d_h.jpg" alt="Timothy Lefkowitz Portfolio">
         <img src="https://live.staticflickr.com/65535/49452931963_4e951ce817_h.jpg" alt="Timothy Lefkowitz Portfolio">
-        <img src="paris.jpg">
+
+    </div>
+    <div class="column">
+        <img src="img/53320007.JPG" alt="Timothy Lefkowitz Portfolio">
+        <img src="img/53320009.JPG" alt="Timothy Lefkowitz Portfolio">
+        <img src="https://live.staticflickr.com/65535/32823308387_36c83c2a5f_b.jpg" alt="Timothy Lefkowitz Portfolio">
+        <img src="https://live.staticflickr.com/4847/32237877538_73e0a221b9_b.jpg" alt="Timothy Lefkowitz Portfolio">
+        <img src="https://live.staticflickr.com/1977/44326478934_8d8ed8e5a2_b.jpg" alt="Timothy Lefkowitz Portfolio">
+        <img src="https://live.staticflickr.com/1887/30817106608_78a25a2aa2_b.jpg" alt="Timothy Lefkowitz Portfolio">
+        <img src="https://live.staticflickr.com/1863/30816971398_3ef5c2c3d8_b.jpg" alt="Timothy Lefkowitz Portfolio">
     </div>
     <div class="column">
         <img src="https://live.staticflickr.com/65535/49423514947_1c9987eef8_h.jpg" alt="Timothy Lefkowitz Portfolio">
@@ -161,6 +170,7 @@
         <img src="https://live.staticflickr.com/65535/49423227226_9165b79a44_h.jpg" alt="Timothy Lefkowitz Portfolio">
         <img src="https://live.staticflickr.com/65535/49422760843_62758895cf_h.jpg" alt="Timothy Lefkowitz Portfolio">
         <img src="https://live.staticflickr.com/65535/49423330207_73891e948e_h.jpg" alt="Timothy Lefkowitz Portfolio">
+        <img src="https://live.staticflickr.com/1888/44372608821_9ef734999c_b.jpg" alt="Timothy Lefkowitz Portfolio">
     </div>
     <div class="column">
         <img src="https://live.staticflickr.com/65535/49422640128_f1d1a4c167_h.jpg" alt="Timothy Lefkowitz Portfolio">
@@ -170,6 +180,7 @@
         <img src="https://live.staticflickr.com/65535/49423034796_21bd7b87fc_h.jpg" alt="Timothy Lefkowitz Portfolio">
         <img src="https://live.staticflickr.com/65535/49423261432_eb77cef887_h.jpg" alt="Timothy Lefkowitz Portfolio">
         <img src="https://live.staticflickr.com/65535/49279804481_09c1240d54_h.jpg" alt="Timothy Lefkowitz Portfolio">
+        <img src="https://live.staticflickr.com/8616/28159333763_13f9ef51e2_b.jpg" alt="Timothy Lefkowitz Portfolio">
     </div>
     <div class="column">
         <img src="https://live.staticflickr.com/65535/49279327133_9a1b730166_h.jpg" alt="Timothy Lefkowitz Portfolio">
@@ -178,7 +189,39 @@
         <img src="https://live.staticflickr.com/65535/49262514792_da589ba296_b.jpg" alt="Timothy Lefkowitz Portfolio">
         <img src="https://live.staticflickr.com/7695/28668952962_47a8b8cb1b_h.jpg" alt="Timothy Lefkowitz Portfolio">
         <img src="https://live.staticflickr.com/5286/5362635841_05c8beb500_h.jpg" alt="Timothy Lefkowitz Portfolio">
+        <img src="https://live.staticflickr.com/5242/5225375783_b0aa579da9_b.jpg" alt="Timothy Lefkowitz Portfolio">
     </div>
+
+    <div class="column">
+        <img src="https://live.staticflickr.com/65535/49423513447_93423cdb1c_b.jpg" alt="Timothy Lefkowitz Portfolio">
+        <img src="https://live.staticflickr.com/1877/29750073687_4cc580b849_b.jpg" alt="Timothy Lefkowitz Portfolio">
+        <img src="https://live.staticflickr.com/1858/44372636591_6c001059ff_b.jpg" alt="Timothy Lefkowitz Portfolio">
+        <img src="https://live.staticflickr.com/1847/44372681891_771b7f1309_b.jpg" alt="Timothy Lefkowitz Portfolio">
+        <img src="https://live.staticflickr.com/1899/30505588498_81181eae9a_b.jpg" alt="Timothy Lefkowitz Portfolio">
+        <img src="https://live.staticflickr.com/1879/44324061752_d003cf7db9_b.jpg" alt="Timothy Lefkowitz Portfolio">
+    </div>
+
+    <div class="column">
+        <img src="https://live.staticflickr.com/7558/28159333503_1434d21eb4_b.jpg" alt="Timothy Lefkowitz Portfolio">
+        <img src="https://live.staticflickr.com/5630/22932623425_4b7915c452_h.jpg" alt="Timothy Lefkowitz Portfolio">
+        <img src="https://live.staticflickr.com/7760/28742582576_046ab9aa5f_b.jpg" alt="Timothy Lefkowitz Portfolio">
+        <img src="https://live.staticflickr.com/7761/28697109351_1cefcd8f3a_b.jpg" alt="Timothy Lefkowitz Portfolio">
+        <img src="https://live.staticflickr.com/8861/28668951012_afb1e79226_b.jpg" alt="Timothy Lefkowitz Portfolio">
+        <img src="https://live.staticflickr.com/8439/28697110311_d54b6fd37b_h.jpg" alt="Timothy Lefkowitz Portfolio">
+        <img src="https://live.staticflickr.com/5241/5229642933_5ec5067e50_b.jpg" alt="Timothy Lefkowitz Portfolio">
+        <img src="https://live.staticflickr.com/5222/5630031553_82013065cd_b.jpg" alt="Timothy Lefkowitz Portfolio">
+    </div>
+
+    <div class="column">
+        <img src="https://live.staticflickr.com/8231/28668946842_f29f70024f_h.jpg" alt="Timothy Lefkowitz Portfolio">
+        <img src="https://live.staticflickr.com/5743/23674355172_77c2fffc32_b.jpg" alt="Timothy Lefkowitz Portfolio">
+        <img src="https://live.staticflickr.com/5819/22921587215_838614e096_h.jpg" alt="Timothy Lefkowitz Portfolio">
+        <img src="https://live.staticflickr.com/5710/22908073162_58794f7093_b.jpg" alt="Timothy Lefkowitz Portfolio">
+        <img src="https://live.staticflickr.com/8636/28156742154_1aa1e0f045_h.jpg" alt="Timothy Lefkowitz Portfolio">
+        <img src="https://live.staticflickr.com/5060/5494058205_bb7c152ae5_h.jpg" alt="Timothy Lefkowitz Portfolio">
+        <img src="https://live.staticflickr.com/8662/28697557031_375064f8de_b.jpg" alt="Timothy Lefkowitz Portfolio">
+    </div>
+
 </div>
 
 <style>
