--- a/home.html
+++ b/home.html
@@ -119,13 +119,13 @@
 
 
                 <li class="nav-item">
-                    <a class="nav-link" href="friends">3d creations</a>
+                    <a class="nav-link" href="3d.html">3d creations</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="friends">photographs</a>
+                    <a class="nav-link" href="flickarchive.html">photographs</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="friends">about me</a>
+                    <a class="nav-link" href="aboutme.html">about me</a>
                 </li>
             </ul>
 
