--- a/aboutme.html
+++ b/aboutme.html
@@ -107,25 +107,25 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle bg-dark" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">code</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="/calc.html">My Calculator</a>
-                        <a class="dropdown-item" href="/coffee.html">Coffee Project(my first paired programming project)</a>
-                        <a class="dropdown-item" href="/foods.html">Favorite Foods Map</a>
-                        <a class="dropdown-item" href="/konami.html">Konami Code</a>
-                        <a class="dropdown-item" href="/weathermap.html">Weather Map</a>
+                        <a class="dropdown-item" href="calc.html">My Calculator</a>
+                        <a class="dropdown-item" href="coffee.html">Coffee Project(my first paired programming project)</a>
+                        <a class="dropdown-item" href="foods.html">Favorite Foods Map</a>
+                        <a class="dropdown-item" href="konami.html">Konami Code</a>
+                        <a class="dropdown-item" href="weathermap.html">Weather Map</a>
                         <div role="separator" class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#three">three</a>
+                        <!--                        <a class="dropdown-item" href="#three">three</a>-->
                     </div>
                 </li>
 
 
                 <li class="nav-item">
-                    <a class="nav-link" href="friends">3d creations</a>
+                    <a class="nav-link" href="3d.html">3d creations</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="friends">photographs</a>
+                    <a class="nav-link" href="flickarchive.html">photographs</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="friends">about me</a>
+                    <a class="nav-link" href="aboutme.html">about me</a>
                 </li>
             </ul>
 
@@ -134,9 +134,9 @@
 
             <div class="d-flex align-items-center">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-<!--                    <li class="nav-item">-->
-<!--                        <a class="nav-link" href="post">post</a>-->
-<!--                    </li>-->
+                    <!--                    <li class="nav-item">-->
+                    <!--                        <a class="nav-link" href="post">post</a>-->
+                    <!--                    </li>-->
                     <!--                    <li class="nav-item">-->
                     <!--                        <a class="nav-link" th:action="@{/logout}" th:method="post" th:href="logout">logout</a>-->
                     <!--                    </li>-->
@@ -153,11 +153,11 @@
 
                     <!-- More links here... -->
                     <!-- More links here... -->
-<!--                    <li class="nav-item">-->
-<!--                        <form th:action="@{/logout}" th:method="post">-->
-<!--                            <button class="btn-link btn" style="text-decoration: none; color:#00b1ae">logout</button>-->
-<!--                        </form>-->
-<!--                    </li>-->
+                    <!--                    <li class="nav-item">-->
+                    <!--                        <form th:action="@{/logout}" th:method="post">-->
+                    <!--                            <button class="btn-link btn" style="text-decoration: none; color:#00b1ae">logout</button>-->
+                    <!--                        </form>-->
+                    <!--                    </li>-->
                 </ul>
 
 
