--- a/3d.html
+++ b/3d.html
@@ -81,7 +81,7 @@
 
 
                 <li class="nav-item">
-                    <a class="nav-link" href="3d.html">3d creations</a>
+                    <a class="nav-link" href="3d.html">3d realms</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="flickarchive.html">photographs</a>
