--- a/aboutme.html
+++ b/aboutme.html
@@ -225,6 +225,15 @@
                     <a style="color:#737373;" href="Tim/contact">resume / cv</a>
                 </div>
 
+<!--                <style>-->
+<!--                    @mixin neon-border($color,)-->
+<!--                </style>-->
+
+                <div class="container">
+
+
+                </div>
+
 
 
 
