--- a/calc.html
+++ b/calc.html
@@ -48,7 +48,7 @@
             <img src="https://live.staticflickr.com/65535/51369056853_85ef692ae7_o.gif" width="50" height="50" class="d-inline-block align-top" alt="">
         </a>
 
-        <a class="navbar-brand me-2" href="/home.html">
+        <a class="navbar-brand me-2" href="home.html">
             PHOTONs
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
