--- a/aboutme.html
+++ b/aboutme.html
@@ -221,8 +221,8 @@
                     </a>
                     <h1>Timothy Lefkowitz</h1>
                     <a style="color:#737373;" >programmer / 3d artist / photographer</a><p></p>
-                    <a style="color:#737373;" href="/">photonlabs.xyz</a><br>
-                    <a style="color:#737373;" href="Tim/contact">resume / cv</a>
+                    <a style="color:#3a3a3a;" href="/">photonlabs.xyz</a><br>
+                    <a style="color:#2f2f2f;" href="Tim/contact">resume / cv</a>
                 </div>
 
 <!--                <style>-->
