--- a/aboutme.html
+++ b/aboutme.html
@@ -217,12 +217,16 @@
                 <!--          Avatar and Add to Contacts Buttons-->
                 <div style="margin-bottom:1.8vh">
                     <a href="javascript:;" class="avatar rounded-circle">
-                        <img class="avatar" src="/img/me.jpeg" style="height: 20vh; width: 20vh;">
+                        <img class="avatar" src="/img/me1.jpeg" style="height: 20vh; width: 20vh;">
                     </a>
-                    <h1>Timothy Lefkowitz</h1>
+                    <h2>Hi, I'm Timothy Craig Lefkowitz</h2>
                     <a style="color:#737373;" >programmer / 3d artist / photographer</a><p></p>
-                    <a style="color:#3a3a3a;" href="/">photonlabs.xyz</a><br>
-                    <a style="color:#2f2f2f;" href="Tim/contact">resume / cv</a>
+                    <a style="color:#f2511b;" href="https://docs.google.com/document/d/140qW3EW1QqKMFJNFM6-Gg_5R8FnCEOPk57uvXKiRM3E/edit?usp=sharing"> Resume / CV </a>
+                    <p></p>
+                    <p></p>
+                    <a>Creating and building is what I love to do. The locals know me as a photographer but when I'm not out with a camera, I'm in my studio working on computer sciences or experimenting with Music.</a>
+                    <p>life is a balance, I try to enjoy nature and get proper exercise</p>
+                    <p>My work enviorment is on Macintosh, I love Java and Springboot. I enjoy three dimentional modeling and pizza!</p>
                 </div>
 
 <!--                <style>-->
