--- a/blog.html
+++ b/blog.html
@@ -215,6 +215,11 @@
     <div class="row postingDiv" style="display: flex; justify-content: center; align-items: center; text-align: left">
 
 
+<!--      <h4 style="align-items: left; color:#009694" text="title"></h4>-->
+<!--      <img src="img/cat2.jpg" style="width: 95vh; padding-bottom: 2%">-->
+
+
+
       <h4 style="align-items: left; color:#009694" text="Fixing the MoneyCat">Fixing the Japenses Maneki-neko (MoneyCat)</h4>
       <img src="img/cat2.jpg" style="width: 95vh; padding-bottom: 2%">
       <p style="align-items: center">The Japenses Maneki-neko is a figurine which is often believed to bring good luck to the owner.</p>
