--- a/home.html
+++ b/home.html
@@ -158,6 +158,9 @@
 <!--                            <button class="btn-link btn" style="text-decoration: none; color:#00b1ae">logout</button>-->
 <!--                        </form>-->
 <!--                    </li>-->
+                    <li class="nav-item">
+                        <a class="nav-link" href="blog.html" style="color:#00b1ae">blog</a>
+                    </li>
                 </ul>
 
 
