--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <!--      <input type="checkbox" value="remember-me"> Remember me-->
         <!--    </label>-->
     </div>
-    <a href="home.html" class="btn btn-lg btn-block" value="Log In" style="background:linear-gradient(to right, #9e69ba, #b700fc); color:antiquewhite" type="submit"><b>enter</b></a>
+    <a href="flickarchive.html" class="btn btn-lg btn-block" value="Log In" style="background:linear-gradient(to right, #9e69ba, #b700fc); color:antiquewhite" type="submit"><b>enter</b></a>
 
 </form>
 
