--- a/aboutme.html
+++ b/aboutme.html
@@ -217,7 +217,7 @@
                 <!--          Avatar and Add to Contacts Buttons-->
                 <div style="margin-bottom:1.8vh">
                     <a href="javascript:;" class="avatar rounded-circle">
-                        <img class="avatar" src="/img/me1.jpeg" style="height: 20vh; width: 20vh;">
+                        <img class="avatar" src="img/me1.jpeg" style="height: 20vh; width: 20vh;">
                     </a>
                     <h2>Hi, I'm Timothy Craig Lefkowitz</h2>
                     <a style="color:#737373;" >programmer / 3d artist / photographer</a><p></p>
