--- a/weathermap.html
+++ b/weathermap.html
@@ -39,34 +39,57 @@
 <!-- NAV BAR -->
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="fixed-left navbar navbar-expand-lg navbar-dark bg-dark ">
     <!-- Container wrapper -->
     <div class="container">
         <!-- Navbar brand -->
-        <a class="navbar-brand" href="/home">
+        <a class="navbar-brand" href="home.html">
             <!--            <img th:src="@{/users/avatars/BlueSphere1.2.gif}" width="50" height="50" class="d-inline-block align-top" alt=""/>-->
             <img src="https://live.staticflickr.com/65535/51369056853_85ef692ae7_o.gif" width="50" height="50" class="d-inline-block align-top" alt="">
         </a>
 
-        <a class="navbar-brand me-2" href="/home">
-            PHOTONS
+        <a class="navbar-brand me-2" href="/home.html">
+            PHOTONs
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
+        <style>
+            .dropdown-item  {
+                background-color: #646161;
+                hover: #00b1ae;
+            }
+        </style>
         <!-- Collapsible wrapper -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <!-- Left links -->
-            <!--            <ul class="navbar-nav me-auto mb-2 mb-lg-0">-->
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-            <!--                <li class="nav-item">-->
-            <!--                    <a class="nav-link" href="groups">groups</a>-->
-            <!--                </li>-->
-            <!--                <li class="nav-item">-->
-            <!--                    <a class="nav-link" href="friends">friends</a>-->
-            <!--                </li>-->
-            <!--            </ul>-->
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle bg-dark" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">code</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="calc.html">My Calculator</a>
+                        <a class="dropdown-item" href="coffee.html">Coffee Project(my first paired programming project)</a>
+                        <a class="dropdown-item" href="foods.html">Favorite Foods Map</a>
+                        <a class="dropdown-item" href="konami.html">Konami Code</a>
+                        <a class="dropdown-item" href="weathermap.html">Weather Map</a>
+                        <div role="separator" class="dropdown-divider"></div>
+                        <!--                        <a class="dropdown-item" href="#three">three</a>-->
+                    </div>
+                </li>
+
+
+                <li class="nav-item">
+                    <a class="nav-link" href="3d.html">3d creations</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="flickarchive.html">photographs</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="aboutme.html">about me</a>
+                </li>
+            </ul>
 
 
             <!-- Left links -->
@@ -74,11 +97,8 @@
             <div class="d-flex align-items-center">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <!--                    <li class="nav-item">-->
-                    <!--                        <a class="nav-link" href="updatestatus">update status</a>-->
+                    <!--                        <a class="nav-link" href="post">post</a>-->
                     <!--                    </li>-->
-                    <li class="nav-item">
-                        <a class="nav-link" href="/Tim">back to photon labs</a>
-                    </li>
                     <!--                    <li class="nav-item">-->
                     <!--                        <a class="nav-link" th:action="@{/logout}" th:method="post" th:href="logout">logout</a>-->
                     <!--                    </li>-->
@@ -100,6 +120,9 @@
                     <!--                            <button class="btn-link btn" style="text-decoration: none; color:#00b1ae">logout</button>-->
                     <!--                        </form>-->
                     <!--                    </li>-->
+                    <li class="nav-item">
+                        <a class="nav-link" href="blog.html" style="color:#00b1ae">blog</a>
+                    </li>
                 </ul>
 
 
@@ -112,14 +135,10 @@
 </nav>
 <!-- END OF NAVBAR     -->
 
-<!--&lt;!&ndash; Media panel &ndash;&gt;-->
-<!--<div class="container d-flex justify-content-center mediacontainer flavoursContainer">-->
-<!--    <img src="img/photonlife.png">-->
-<!--</div>-->
 
 <style>
     .container{
-        margin-top:5%;
+        /*margin-top:5%;*/
     }
 </style>
 
@@ -135,7 +154,6 @@
                     <li class="list-group-item dayonepressure">Pressure:</li>
                     <li class="list-group-item dayonetemp">Humidity:</li>
                     <li class="list-group-item dayonewind">Wind:</li>
-
                 </ul>
             </div>
                 <div class="card" style="width: 10rem;">
@@ -147,7 +165,6 @@
                         <li class="list-group-item daytwopressure">Pressure:</li>
                         <li class="list-group-item daytwotemp">Humidity:</li>
                         <li class="list-group-item daytwowind">Wind:</li>
-
                     </ul>
                 </div>
 
@@ -160,71 +177,8 @@
                 <li class="list-group-item daythreepressure">Pressure:</li>
                 <li class="list-group-item daythreetemp">Humidity:</li>
                 <li class="list-group-item daythreewind">Wind:</li>
-
             </ul>
         </div>
-
-
-
-<!--        <div class="col">-->
-<!--            <div class="card" style="width: 10rem;">-->
-<!--                <div class="card-header">-->
-<!--                    <a class="daytwo text-center">10-16-1988</a>-->
-<!--                </div>-->
-<!--                <ul class="list-group list-group-flush">-->
-<!--                    <li class="list-group-item">Description:</li>-->
-<!--                    <li class="list-group-item">Humidity:</li>-->
-<!--                    <li class="list-group-item">Wind:</li>-->
-<!--                    <li class="list-group-item">Pressure:</li>-->
-<!--                </ul>-->
-<!--            </div>-->
-<!--        </div>-->
-
-
-<!--        <div class="col">-->
-<!--            <div class="card" style="width: 10rem;">-->
-<!--                <div class="card-header">-->
-<!--                    <a class="daythree text-center">10-16-1988</a>-->
-<!--                </div>-->
-<!--                <ul class="list-group list-group-flush">-->
-<!--                    <li class="list-group-item">Description:</li>-->
-<!--                    <li class="list-group-item">Humidity:</li>-->
-<!--                    <li class="list-group-item">Wind:</li>-->
-<!--                    <li class="list-group-item">Pressure:</li>-->
-<!--                </ul>-->
-<!--            </div>-->
-<!--        </div>-->
-
-
-<!--        <div class="col">-->
-<!--            <div class="card" style="width: 10rem;">-->
-<!--                <div class="card-header">-->
-<!--                    <a class="dayfour text-center">10-16-1988</a>-->
-<!--                </div>-->
-<!--                <ul class="list-group list-group-flush">-->
-<!--                    <li class="list-group-item">Description:</li>-->
-<!--                    <li class="list-group-item">Humidity:</li>-->
-<!--                    <li class="list-group-item">Wind:</li>-->
-<!--                    <li class="list-group-item">Pressure:</li>-->
-<!--                </ul>-->
-<!--            </div>-->
-<!--        </div>-->
-
-
-<!--        <div class="col">-->
-<!--            <div class="card" style="width: 10rem;">-->
-<!--                <div class="card-header">-->
-<!--                    <a class="dayfive text-center">10-16-1988</a>-->
-<!--                </div>-->
-<!--                <ul class="list-group list-group-flush">-->
-<!--                    <li class="list-group-item">Description:</li>-->
-<!--                    <li class="list-group-item">Humidity:</li>-->
-<!--                    <li class="list-group-item">Wind:</li>-->
-<!--                    <li class="list-group-item">Pressure:</li>-->
-<!--                </ul>-->
-<!--            </div>-->
-<!--        </div>-->
-
 
 
 </div>
@@ -276,18 +230,14 @@
 </style>
 
 
+    <!--&lt;!&ndash; Latest compiled JavaScript &ndash;&gt;-->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
-
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 
 
@@ -300,11 +250,8 @@
 <!--Boot Strap -->
 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-
-
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>-->
+<!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>-->
 <!--- MapBox CDN --->
 
 
@@ -421,20 +368,7 @@
             const daythreepressure = results.list[8].main.pressure;
             $(".daythreepressure").html("Pressure: "+daythreepressure);
 
-
-
-            //"results" is the weather object
-
-            // Example
-            // $("card").html("<h4>"+ results.day1.getforcast +"</h4>")
-
-
-            // if (weather.dt_txt.split(" ")[1] === "09:00:00") {
-            //     weatherlist.push(weather);
-            //     console.log(weatherlist)
         });
-
-        // $("#day1").append("<a class=\"day1 text-center day1\" id=\"day1\">day1</a>");
 
     });
 
@@ -446,6 +380,8 @@
 
 
 <link href='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css' rel='stylesheet' />
+
+
 
 
 </body>
