--- a/weathermap.html
+++ b/weathermap.html
@@ -48,7 +48,7 @@
             <img src="https://live.staticflickr.com/65535/51369056853_85ef692ae7_o.gif" width="50" height="50" class="d-inline-block align-top" alt="">
         </a>
 
-        <a class="navbar-brand me-2" href="/home.html">
+        <a class="navbar-brand me-2" href="home.html">
             PHOTONs
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -79,7 +79,6 @@
                     </div>
                 </li>
 
-
                 <li class="nav-item">
                     <a class="nav-link" href="3d.html">3d creations</a>
                 </li>
@@ -96,30 +95,6 @@
 
             <div class="d-flex align-items-center">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <!--                    <li class="nav-item">-->
-                    <!--                        <a class="nav-link" href="post">post</a>-->
-                    <!--                    </li>-->
-                    <!--                    <li class="nav-item">-->
-                    <!--                        <a class="nav-link" th:action="@{/logout}" th:method="post" th:href="logout">logout</a>-->
-                    <!--                    </li>-->
-
-                    <!--                    <li class="nav-item">-->
-                    <!--&lt;!&ndash;                         <a&ndash;&gt;-->
-                    <!--&lt;!&ndash;                        class="btn btn-dark px-3 material-icons-outlined"&ndash;&gt;-->
-                    <!--&lt;!&ndash;                        href="myprofile"&ndash;&gt;-->
-                    <!--&lt;!&ndash;                        role="button">&ndash;&gt;-->
-
-                    <!--&lt;!&ndash;                             <i class="material-icons" style="font-size:14px;">account_circle</i>&ndash;&gt;-->
-                    <!--&lt;!&ndash;                         </a>&ndash;&gt;-->
-                    <!--                    </li>-->
-
-                    <!-- More links here... -->
-                    <!-- More links here... -->
-                    <!--                    <li class="nav-item">-->
-                    <!--                        <form th:action="@{/logout}" th:method="post">-->
-                    <!--                            <button class="btn-link btn" style="text-decoration: none; color:#00b1ae">logout</button>-->
-                    <!--                        </form>-->
-                    <!--                    </li>-->
                     <li class="nav-item">
                         <a class="nav-link" href="blog.html" style="color:#00b1ae">blog</a>
                     </li>
@@ -135,12 +110,6 @@
 </nav>
 <!-- END OF NAVBAR     -->
 
-
-<style>
-    .container{
-        /*margin-top:5%;*/
-    }
-</style>
 
 <div class="container">
     <div class="row justify-content-around">
@@ -179,8 +148,6 @@
                 <li class="list-group-item daythreewind">Wind:</li>
             </ul>
         </div>
-
-
 </div>
 
 
@@ -207,9 +174,6 @@
     .row{
         flex-wrap: nowrap;
     }
-    .col{
-        flex-grow: 0;
-    }
     #map{
         display: flex;
         justify-content: center;
@@ -220,7 +184,7 @@
     .map {
         display: flex;
         justify-content: center;
-        padding-top:1em;
+        /*padding-top:1em;*/
 
     }
     .days {
