feat: updates to map

--- a/weathermap.html
+++ b/weathermap.html
@@ -25,7 +25,11 @@
     <!-- StyleSheet -->
     <link rel="stylesheet" href="stylesheet/styles.css">
 
-<!--    &lt;!&ndash;- J Query &ndash;&gt;-->
+    <!--    //favcon-->
+    <link rel="icon" type="image/png" sizes="16x16" href="https://live.staticflickr.com/65535/51320697245_9708355788_c.jpg">
+
+
+    <!--    &lt;!&ndash;- J Query &ndash;&gt;-->
 
 <!--    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
 
@@ -184,7 +188,7 @@
     .map {
         display: flex;
         justify-content: center;
-        /*padding-top:1em;*/
+        padding-top:1em;
 
     }
     .days {
